--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
     var tempoResposta = get.get('tempoEspera') ?? 1000;
     var nomeBot = get.get('nome') ?? 'BresoDEV Bot';
-    var fotoperfil = get.get('foto') ?? 'https://yt3.googleusercontent.com/JOn2qFWSVZbOohyGSkWfoPNM_KkUyGcMg3S0WXt9N2FHRLHKVr5UyJL5UmpXLEG4cbyNZ9Xg=s900-c-k-c0x00ffffff-no-rj';
+    var fotoperfil = get.get('foto') ?? 'breso.png';
     var tema = get.get('tema') ?? '0';
     var nomeUsuario = get.get('nomeUsuario') ?? '';
 
