--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <style>
     * {
+        -webkit-tap-highlight-color: transparent;
+        -webkit-touch-callout: none;
         font-size: small;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     }
@@ -328,11 +330,11 @@ var tempoResposta = 1000;
         tempoResposta = parseInt(localStorage.getItem('tempo'));
     }
 //------------------------------------------------
-    if(get.get('nomeBotCalculadora')){
-        nomeBot = get.get('nomeBotCalculadora');
+    if(get.get('nome')){
+        nomeBot = get.get('nome');
     }
-    else if(localStorage.getItem('nomeBotCalculadora')){
-        nomeBot = localStorage.getItem('nomeBotCalculadora');
+    else if(localStorage.getItem('nome')){
+        nomeBot = localStorage.getItem('nome');
     }
 
 //------------------------------------------------
@@ -426,7 +428,7 @@ var tempoResposta = 1000;
             nomeBot = pergunta.replace('/nome ', '');;
             document.getElementById('nome').innerHTML = nomeBot;
 
-            localStorage.setItem('nomeBotCalculadora',nomeBot)
+            localStorage.setItem('nome',nomeBot)
 
             Responder('Otimo, agora me chamo ' + nomeBot + '. Gostei!');
         }
